apps/kube-prometheus-stack/overlays/homelander/ingress-alertmanager-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  tls:
    - hosts:
        - alertmanager.homelander.local
      secretName: alertmanager-tls
  rules:
    - host: alertmanager.homelander.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-alertmanager
                port:
                  number: 9093
