apps/kube-prometheus-stack/overlays/homelander/ingress-prometheus-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
spec:
  tls:
    - hosts:
        - prometheus.homelander.local
      secretName: prometheus-tls
  rules:
    - host: prometheus.homelander.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
